--- a/templates/base.twig
+++ b/templates/base.twig
@@ -73,6 +73,12 @@
 		<!-- ======================== javascript =============================== -->
         {% block javascript %}
 
+          <script type="text/javascript" src="bower_components/jQuery/dist/jQuery.js"></script>
+          <script type="text/javascript" src="bower_components/twig.js/twig.js"></script>
+          <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
+          <script type="text/javascript" src="bower_components/Upbase/js/upbase.js"></script>
+          <script type="text/javascript" src="static/js/app.js"></script></script>
+
 
 
 
