Adding html structure for app.

--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -84,3 +84,7 @@
 
 
 body { background: red; }
+
+h4 { padding: 12px; margin: 20px; font-size: 24px; background-color: pink; color: #fff; }
+
+h5 { padding: 12px; margin: 20px; font-size: 36px; background-color: black; color: yello; }
