--- a/templates/base.twig
+++ b/templates/base.twig
@@ -67,6 +67,16 @@
 		</section> <!-- /content -->
 
 
+		<!-- Footer -->
+		<!-- ===================================== -->
+		{% block footer %}
+
+			<h5>footer</h5>
+
+
+
+		{% endblock %} {# /footer #}
+
 
 
 
