--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -87,4 +87,4 @@ body { background: red; }
 
 h4 { padding: 12px; margin: 20px; font-size: 24px; background-color: pink; color: #fff; }
 
-h5 { padding: 12px; margin: 20px; font-size: 36px; background-color: black; color: yello; }
+h5 { padding: 12px; margin: 20px; font-size: 36px; background-color: black; color: yellow; }
