--- a/templates/tease.twig
+++ b/templates/tease.twig
@@ -1,4 +1,29 @@
 <div class="tz">
-	<h4>Yo, this is a tease</h4>
+
+	<h4 class="tz-source"><a class="source-link" href="#">Reader's Digest</h4>
+	<h1 class="tz-head">
+		<a class="tz-head-link" href="#">Man loves cheese, Deep Space 9, bikes and video games</a>
+	</h1>
+
+	<div class="tz-meta">
+		<h4 class="tz-timestamp">1 Day</h4>
+		<h4 class="tz-byline">By <span class="tz-author">Nite Plummer</span></h4>
+	</div> <!-- /tz-meta -->
+
+	<div class="tz-content">
+		<p class="tz-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur harum aspernatur corporis inventore dignissimos, id facilis provident suscipit dolor quis. Veritatis laudantium quasi pariatur ipsam voluptatum ex tempora nesciunt facere quia, delectus neque illum distinctio.</p>
+	</div> <!-- /tz-content -->
+
+	<div class="tz-social">
+		<ul class="social-heat-items">
+			{% for i in 1..5 %}
+			<li class="social-heat-iteam">x</li>
+			{% endfor %}
+		</ul>
+
+		<p class="social-shares"><span class="fb-shares">xxx</span>Facebook Shares</p>
+		<p class="social-shares"><span class="twitter-share">xxx</span>Retweets</p>
+
+	</div> <!-- /tz-social -->
 
 </div> <!-- /tz-->
