--- a/templates/base.twig
+++ b/templates/base.twig
@@ -26,6 +26,10 @@
 	    <link rel="stylesheet" href="/static/css/screen.css" type="text/css"/>
 
 
+		<!-- Google font link -->
+	    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,800italic,400,800' rel='stylesheet' type='text/css'>
+
+
 	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 
