Test search feature

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -71,17 +71,7 @@
 		</section> <!-- /content -->
 
 
-		<!-- Footer -->
-		<!-- ===================================== -->
-		{% block footer %}
-
-			<h5>footer</h5>
-
-
-
-		{% endblock %} {# /footer #}
-
-
+                <div class="test-container"></div>
 
 
 		<!-- ======================== javascript =============================== -->
