--- a/templates/index.twig
+++ b/templates/index.twig
@@ -19,7 +19,7 @@
 		{# =============================== #}
 		{# Search #}
 		{% block search %}
-			{# include "search-form.twig" #}
+			{% include "search-form.twig" %}
 		{% endblock %} {# /search}
 
 
