Adding some colors to screen.scss. Noodling in index.twig and base.twig.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -75,7 +75,9 @@
 		<!-- ===================================== -->
 		{% block footer %}
 
-			<h5>footer</h5>
+			<div class="footer">
+
+			</div> <!-- /footer -->
 
 
 
