--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -8,19 +8,55 @@
 
 @import "base";
 
-// --------------------------------------------
-// --------------------------------------------
-//
-// Variables
-//
-// --------------------------------------------
-// --------------------------------------------
 
-// @import "base/color-var";
-// @import "base/breakpoint-var";
-// @import "base/var-fonts";
+
+
+// --------------------------------------------
+// --------------------------------------------
+//
+// Type Variables
+//
+// --------------------------------------------
+// --------------------------------------------
 
 $base-font: 'Open Sans', sans-serif;
+
+
+
+
+// --------------------------------------------
+// --------------------------------------------
+//
+// Color Variables
+//
+// --------------------------------------------
+// --------------------------------------------
+
+$brand-main: #3e606f;
+$brand-secondary: #69a2bb;
+
+$color-bg: #f9f9f9;
+
+$social-hot: #cb1e48;
+
+$black-100: 	#2a272b; 				// 42, 29, 43
+$black-90: 		#383437;				// 56, 52, 55
+$black-80: 		#474245; 				// 71, 66, 69
+$black-70: 		#565153; 				// 86, 81, 83
+$black-60: 		#686265;				// 104, 98, 101
+$black-50: 		#7a7577; 				// 122, 117, 119
+$black-40: 		#908b8c; 				// 144, 139, 140
+$black-30: 		#a6a1a3; 				// 166, 161, 163
+$black-20: 		#bfbbbc; 				// 191, 187, 188
+$black-10: 		#dad7d7; 				// 218, 215, 215
+
+$black: 		$black-100;
+
+
+$tz-hed: $black-100;
+$tz-author: $black-80;
+$tz-text: $black-60;
+$tz-source: $black-90;
 
 
 
@@ -32,17 +68,16 @@ $base-font: 'Open Sans', sans-serif;
 // --------------------------------------------
 // --------------------------------------------
 
-
-
 body {
-	background: red;
+	background: $color-bg;
 	font-family: $base-font;
 
 }
 
 
-
 h5 { padding: 12px; margin: 20px 0; font-size: 36px; background-color: black; color: yellow; }
+
+
 
 
 // --------------------------------------------
@@ -73,3 +108,14 @@ h5 { padding: 12px; margin: 20px 0; font-size: 36px; background-color: black; co
 		margin-top: 40px;
 	}
 }
+
+.tz-timestamp { color: $tz-source; }
+
+.tz-byline { color: $tz-author; }
+
+.tz-head-link,
+.source-link { color: $black-100; }
+
+
+
+
