Adding dropshadow to filter keywords

--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -205,6 +205,7 @@ nav {
   padding: 1em;
   margin-bottom: 2em;
   border-bottom: 1px solid #eee;
+  box-shadow: 0px 3px 4px 0px rgba(178, 178, 178, 0.2);
 
 // --------------------------------------------
 // --------------------------------------------
