--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -406,6 +406,7 @@ nav h1 {
   padding: 1em;
   margin-bottom: 2em;
   border-bottom: 1px solid #eee;
+  box-shadow: 0px 3px 4px 0px rgba(178, 178, 178, 0.2);
 }
 .result-filter-mod .tz {
   background-color: whitesmoke;
