--- a/templates/base.twig
+++ b/templates/base.twig
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--><html class="no-js" {{site.language_attributes}}> <!--<![endif]-->
     <head>
 	    <meta charset="UTF-8" />
-	    <title>xxx</title>
+	    <title>Angler</title>
 	    {% if meta_description %}
 	        <meta name="description" content="{{meta_description}}">
 	    {% endif %}
