Making the search tokens overlay work

--- a/templates/search-form.twig
+++ b/templates/search-form.twig
@@ -8,9 +8,7 @@
 {# include "search-form.twig" #}
 <form class="headline-search" action="/" method="get" id="search_form">
 	<div class="search-term-wrapper">
-	        <ul class="tokens">
-	                <li>boston</li>
-	                <li>patriots</li>
+	        <ul id="search-term-tokens" class="tokens">
 	        </ul>
 	</div>
 	<input type="search" id="headline-search-input" class="headline-search-input js-headline-search" value="" placeholder="Type your search here"></input>
