Rough styling for teases.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -54,7 +54,7 @@
 			{# Page Header #}
 			{% block page_header %} {% endblock %}
 
-			<div class="content-inner l-site-width">
+			<div class="content-inner">
 
 				<!-- Content -->
 				<!-- ===================================== -->
