--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -107,6 +107,10 @@ h5 { padding: 12px; margin: 20px 0; font-size: 36px; background-color: black; co
 }
 
 
+.l-site-width {
+	max-width: 900px;
+	margin: 0 auto;
+}
 
 
 
@@ -253,11 +257,25 @@ nav {
 // --------------------------------------------
 // --------------------------------------------
 
+.l-static {
+	@include pie-clearfix;
+	@include grid-static(150px, 40px);
+	.ui-block-1 { float: right; }
+	.ui-block-2 { float: left; }
+}
+
+.tz-social-mod {
+	// background-color: pink;
+}
+
 .tz {
 	background-color: #fff;
 	padding: 40px;
+	max-width: 820px;
+	margin: 0 auto;
+	border: 1px solid darken($bg, 5%);
 	& + & {
-		margin-top: 40px;
+		margin-top: 15px;
 	}
 }
 
@@ -266,5 +284,110 @@ nav {
 
 .tz-byline { color: $tz-author; }
 
+.tz-head {
+	font-size: 18px;
+	letter-spacing: -1px;
+	margin-bottom: 0.5em;
+}
+
 .tz-head-link,
-.source-link { color: $black-100; }
+.source-link {
+	color: $black-80;
+	text-decoration: none;
+}
+
+.tz-text {
+	b {
+		color: $secondary;
+		font-weight: normal;
+	}
+}
+
+.tz-social {
+	font-size: 11px;
+	cursor: pointer;
+	&:hover {
+		.share-info {
+			display: block;
+		}
+	}
+}
+
+.share-info {
+	display: none;
+	background-color: #fff;
+	box-shadow: 0 1px 2px $black-10;
+	padding: 10px;
+	position: relative;
+	max-width: 85px;
+	top: 10px;
+	&:before {
+		position: absolute;
+		top: -10px;
+		content: '\0020';
+		width: 15px;
+		height: 15px;
+		background-color: white;
+		transform: rotate(45deg);
+		right: 10px;
+	}
+
+}
+
+
+.tz-source {
+	color: $black-50;
+	font-size: 12px;
+	margin-bottom: 15px;
+	cursor: pointer;
+
+}
+
+.source-link {
+	color: $black-50;
+}
+
+.share-num {
+	font-weight: 800;
+	// margin-right: 5px;
+	display: inline-block;
+	position: relative;
+	top: -3px;
+
+}
+
+.social-heat-items {
+
+}
+
+.social-heat-item {
+	display: inline-block;
+	margin-right: 3px;
+	width: 10px;
+	height: 10px;
+	background-color: $social-hot;
+	border-radius: 50%;
+	&:last-child {
+		margin-right: 0;
+	}
+}
+
+
+.social-shares-label {
+	font-size: 12px;
+	font-weight: 800;
+	color: $black-30;
+}
+
+.social-shares { }
+
+.social-shares-icon {
+	display: inline-block;
+	width: 15px;
+	height: 15px;
+	background-size: contain;
+	opacity: 0.4;
+
+	.facebook & { background-image: url('../img/facebook.svg'); }
+	.twitter & { background-image: url('../img/twitter.svg'); }
+}
