--- a/templates/ajax-tease.twig
+++ b/templates/ajax-tease.twig
@@ -1,29 +1,57 @@
-<div class="tz">
+<article class="tz">
+	<div class="l-static">
 
-	<h4 class="tz-source"><a class="source-link" href="#">{{newsItem.source.name}}</h4>
-	<h1 class="tz-head">
-		<a class="tz-head-link" href="#">{{ newsItem.headline }}</a>
-	</h1>
+		<div class="ui-block-1">
+			<div class="ui-block-inner">
 
-	<div class="tz-meta">
-		<h4 class="tz-timestamp">{{ newsItem.publishedDate }}</h4>
-		<h4 class="tz-byline">By <span class="tz-author">Nite Plummer</span></h4>
-	</div> <!-- /tz-meta -->
 
-	<div class="tz-content">
-		<p class="tz-text">{{ newsItem.content }}</p>
-	</div> <!-- /tz-content -->
+				<h1 class="tz-head">
+					<a class="tz-head-link" href="#">{{ newsItem.headline }}</a>
+				</h1>
 
-	<div class="tz-social">
-		<ul class="social-heat-items">
-			{% for i in newsItem.social.score %}
-			<li class="social-heat-iteam"></li>
-			{% endfor %}
-		</ul>
+				<div class="tz-meta">
+					<!-- <h4 class="tz-timestamp">{{ newsItem.publishedDate }}</h4> -->
+					<!-- <h4 class="tz-byline">By <span class="tz-author">Nite Plummer</span></h4> -->
+				</div> <!-- /tz-meta -->
 
-		<p class="social-shares"><span class="fb-shares">{{ newsItem.social.facebook }}</span>Facebook Shares</p>
-		<p class="social-shares"><span class="twitter-share">{{ newsItem.social.twitter }}</span>Retweets</p>
+				<div class="tz-content">
+					<p class="tz-text">{{ newsItem.content }}</p>
+				</div> <!-- /tz-content -->
+		</div> <!-- /ui-block-inner -->
+		</div> <!-- /ui-block-1 -->
 
-	</div> <!-- /tz-social -->
+		<div class="ui-block-2">
+			<div class="ui-block-inner">
+				<div class="tz-social-mod">
+				<h4 class="tz-source"><a class="source-link" href="#">{{newsItem.source.name}}</a></h4>
+					<div class="tz-social">
+						<ul class="social-heat-items">
+							{% for i in newsItem.social.score %}
+							<li class="social-heat-item"></li>
+							{% endfor %}
+							<li class="social-heat-item"></li>
+							<li class="social-heat-item"></li>
+							<li class="social-heat-item"></li>
+							<li class="social-heat-item"></li>
+							<li class="social-heat-item"></li>
+						</ul>
 
-</div> <!-- /tz-->
+						<div class="share-info">
+							<p class="social-shares-label">Shares</p>
+							<p class="social-shares facebook">
+								<span class="social-shares-icon"></span>
+								<span class="share-num fb-shares">{{ newsItem.social.facebook }}</span>
+							</p>
+							<p class="social-shares twitter">
+								<span class="social-shares-icon"></span>
+								<span class="share-num twitter-share">{{ newsItem.social.twitter }}</span>
+							</p>
+						</div> <!-- /share-info -->
+					</div> <!-- /tz-social -->
+				</div> <!-- tz-social-mod -->
+			</div> <!-- /ui-block-inner -->
+		</div> <!-- /ui-block-2 -->
+
+	</div> <!-- /l-static -->
+
+</article> <!-- /tz-->
