--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -132,7 +132,7 @@ h5 { padding: 12px; margin: 20px 0; font-size: 36px; background-color: black; co
 }
 
 nav {
-  // background: $primary;
+  overflow: hidden;
   padding: 0;
   color: #fff;
   height: $header-ht;
@@ -148,6 +148,7 @@ nav {
 // ==========
 
 .logo {
+  font-size: 1.6em;
   width: 8%;
   max-width: 150px;
   line-height: $header-ht;
@@ -176,11 +177,10 @@ nav {
 .search-toggle,
 .headline-search {
   display: inline-block;
-  cursor: pointer;
 }
 
 .headline-search-input {
-  // width: 100%;
+  width: 95%;
   position: relative;
   overflow: hidden;
   padding: 13px;
@@ -227,7 +227,7 @@ nav {
 
 .headline-search {
   position: relative;
-  // width: 80%;
+  width: 80%;
 }
 
 .search-term-wrapper {
