--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -439,6 +439,13 @@ nav h1 {
   box-shadow: 0px 3px 4px 0px rgba(178, 178, 178, 0.2);
 }
 
+.result-filter-mod h4 {
+  text-transform: uppercase;
+  font-size: 0.8em;
+  color: #908b8c;
+  margin-bottom: 1em;
+}
+
 .l-static {
   *zoom: 1;
   *zoom: 1;
