--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -284,7 +284,14 @@ nav {
 
 }
 
-.result-filter-mod { }
+.result-filter-mod { 
+  h4 {
+    text-transform: uppercase;
+    font-size: 0.8em;
+    color: $black-40;
+    margin-bottom: 1em;
+  }
+}
 
 // --------------------------------------------
 // --------------------------------------------
