--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -242,7 +242,6 @@ nav {
   padding: 8px;
 }
 
-
 .tokens {
   li {
     color: hsl(0, 0%, 0%);
@@ -271,14 +270,19 @@ nav {
     height: 10px;
     margin-left: 10px;
     padding-left: 10px;
-    background: $black-50;
-    border-left: 1px solid darken($secondary, 10%);
-    padding: 3px 6px 3px 10px;
+    background: darken($secondary, 10%);
+    border-left: 1px solid darken($secondary, 15%);
+    padding: 3px 10px 3px 10px;
     z-index: 50;
+    border-radius: 0 4px 4px 0;
     &:hover {
       background-color: darken($secondary, 15%);
     }
   }
+}
+
+#search-term-tokens > li {
+    padding: 5px 0 5px 5px;
 }
 
 @-webkit-keyframes popIn {
