Non-working modal about us box.

--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -209,7 +209,7 @@ nav {
     padding: 13px;
     background-color: $inactive-bg;
     color: $inactive-text;
-    &:hover { 
+    &:hover {
       background-color: darken($inactive-bg, 2%);
       cursor: pointer;
     }
@@ -301,7 +301,7 @@ nav {
 
 }
 
-.result-filter-mod { 
+.result-filter-mod {
   h4 {
     text-transform: uppercase;
     font-size: 0.8em;
@@ -520,6 +520,91 @@ nav {
 	cursor: pointer;
 	font-size: 12px;
 	color: $black-50;
+}
+
+
+// --------------------------------------------
+// --------------------------------------------
+//
+// about
+//
+// --------------------------------------------
+// --------------------------------------------
+
+.about-close {
+	background-color: $secondary;
+	padding: 5px;
+	border-radius: 8px;
+	color: white;
+	text-decoration: none;;
+	width: 25px;
+	height: 25px;
+	display: block;
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	text-align: center;
+	&:hover {
+		background-color: darken($secondary, 8%);
+	}
+}
+
+.l-about-grid {
+	@include media-grid(4, 25px);
+}
+.about-mod {
+	background-color: #fff;
+	padding: 40px;
+	max-width: 1100px;
+	height: 400px;
+	margin: 0 auto;
+	border: 1px solid darken($bg, 5%);
+	position: absolute;
+	top: 50%;
+	bottom: 50%;
+	left: 0;
+	right: 0;
+	// text-align: center;
+}
+
+.about-hed {
+	h4 {
+		font-size: 30px;
+		font-weight: normal;
+		margin-bottom: 15px;
+	}
+}
+
+.about-us-hed {
+	text-align: left;
+	font-size: 20px;
+	margin-bottom: 15px;
+}
+
+.about-us {
+	text-align: center;
+	margin-top: 25px;
+}
+
+.about-item {
+	margin-bottom: 25px;
+}
+
+.about-name {
+	color: $secondary;
+	text-decoration: none;
+	&:hover {
+		color: darken($secondary, 8%);
+	}
+}
+
+.about-img-mod {
+	width: 50px;
+	border-radius: 50%;
+	overflow: hidden;
+	text-align: center;
+	margin: 0 auto 8px;
+	img { max-width: 100%; text-align: center; }
 }
 
 
