--- a/templates/index.twig
+++ b/templates/index.twig
@@ -71,10 +71,79 @@
 		        		<div class="opener-mod">
 							<img src="static/img/opener.png">
 							<h3 class="opener-head">Search the best angle for your story</h3>
-							<a href="#" class="what">What is this?</a>
+							<a href="#" id="about-link" class="what">What is this?</a>
 						</div> <!-- /opener-mod -->
                 {% endblock %} {# /headlines #}
         </div> <!-- /result-mod -->
+
+        <div class="about-mod is-open" id="modal">
+        	<a href="#" class="about-close">x</a>
+			<div class="about-hed"> <h4>About Anglr</h4></div>
+			<div class="about-content">
+				<p>Anglr is a search tool for journalists that helps you quickly identify a unique perspective to your story. Seach keywords to see the top stories on Google News, social ranking of each result based on Twitter and Facebook shares, and related keywords. Quickly identify and compare competitors’ stories to help you find the freshest angle to your beat.</p>
+			</div> <!-- /about-content -->
+
+			<div class="about-us">
+				<p class="about-us-hed">We made the thing</p>
+				<ul class="about-items l-about-grid">
+
+
+					<li class="about-item media-block">
+						<div class="about-img-mod">
+							<img class="about-img" src="/static/img/ballard.jpeg">
+						</div> <!-- /about-img-mod -->
+						<a class="about-name" href="https://twitter.com/cj_ballard">@cj_ballard</a>
+					</li> <!-- /about-item-->
+
+					<li class="about-item media-block">
+						<div class="about-img-mod">
+							<img class="about-img" src="/static/img/brooks.jpeg">
+						</div> <!-- /about-img-mod -->
+						<a class="about-name" href="https://twitter.com/jmfbrooks">@jmfbrooks</a>
+					</li> <!-- /about-item-->
+
+
+					<li class="about-item media-block">
+						<div class="about-img-mod">
+							<img class="about-img" src="/static/img/plummer.jpeg">
+						</div> <!-- /about-img-mod -->
+						<a class="about-name" href="https://twitter.com/IntrusionSignal">@IntrusionSignal</a>
+					</li> <!-- /about-item-->
+
+					<li class="about-item media-block">
+						<div class="about-img-mod">
+							<img class="about-img" src="/static/img/novack.png">
+						</div> <!-- /about-img-mod -->
+						<a class="about-name" href="https://twitter.com/jaredNova">@jaredNova</a>
+					</li> <!-- /about-item-->
+
+					<li class="about-item media-block">
+						<div class="about-img-mod">
+							<img class="about-img" src="/static/img/ramos.png">
+						</div> <!-- /about-img-mod -->
+						<a class="about-name" href="https://twitter.com/alishalisha">@alishalisha</a>
+					</li> <!-- /about-item-->
+
+					<li class="about-item media-block">
+						<div class="about-img-mod">
+							<img class="about-img" src="/static/img/staublin.jpg">
+						</div> <!-- /about-img-mod -->
+						<a class="about-name" href="https://twitter.com/gcstaublin">@gcstaublin</a>
+					</li> <!-- /about-item-->
+
+					<li class="about-item media-block">
+						<div class="about-img-mod">
+							<img class="about-img" src="/static/img/workman.jpeg">
+						</div> <!-- /about-img-mod -->
+						<a class="about-name" href="https://twitter.com/michaelworkman">@MichaelWorkman</a>
+					</li> <!-- /about-item-->
+
+
+
+				</ul> <!-- /about-items -->
+			</div> <!-- /about-us -->
+
+        </div> <!-- about-mod -->
 
 
 {% endblock %} {# /content #}
