--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -624,3 +624,15 @@ nav {
 // 	background-color: green;
 // 	height: 400px;
 // }
+
+.loading {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 50px;
+    &.is-open {
+        display: block;
+    }
+}
