--- a/templates/index.twig
+++ b/templates/index.twig
@@ -76,7 +76,7 @@
                 {% endblock %} {# /headlines #}
         </div> <!-- /result-mod -->
 
-        <div class="about-mod is-open" id="modal">
+        <div class="about-mod" id="modal">
         	<a href="#" class="about-close">x</a>
 			<div class="about-hed"> <h4>About Anglr</h4></div>
 			<div class="about-content">
