--- a/static/scss/screen.scss
+++ b/static/scss/screen.scss
@@ -561,17 +561,24 @@ nav {
 }
 .about-mod {
 	background-color: #fff;
+        opacity: 0;
 	padding: 40px;
 	max-width: 1100px;
 	height: 450px;
 	margin: 0 auto;
 	border: 1px solid darken($bg, 5%);
-	position: absolute;
-	top: 50%;
+	position: fixed;
+	top: 25%;
 	bottom: 50%;
 	left: 0;
 	right: 0;
-	// text-align: center;
+        pointer-events: none;
+        @include trans(300ms);
+
+        &.is-open {
+            opacity: 1;
+            pointer-events: auto;
+        }
 }
 
 .about-hed {
