--- a/templates/index.twig
+++ b/templates/index.twig
@@ -12,7 +12,7 @@
 		<nav>
 		        {% block header %}
 		        <div class="logo">
-		                <h1>Anglr</h1>
+		                <h1><a href="/">Anglr</a></h1>
 		        </div>
 		        {% endblock %} {# /header #}
 
